--- a/home.css
+++ b/home.css
@@ -90,7 +90,7 @@ main{
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -116,15 +116,6 @@ main{
     text-shadow: 3px 3px 3px black;
     margin-top: -90px;
 }
-
-
-
-
-
-
-
-
-
 
 #conhecendo{
     padding-left: 150px;
@@ -169,7 +160,7 @@ main{
     background-position: center bottom;
     background-size: cover;
     width: 100%;
-    height: 120vh;
+    height: 130vh;
     margin-top: -80px;
 }
 
@@ -217,7 +208,14 @@ img#feijoada{
     border-radius: 50%;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.534);
     margin-left: 500px;
-    margin-top: -900px;
+    margin-top: -1500px;
+}
+
+img#frango{
+    width: 350px;
+    height: 250px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.534);
 }
 
 footer{
